<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/tv_span"
        android:text="@string/demo_text_spannable_string"
        style="@style/demo_main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:contentDescription="@string/demo_text_image"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sms"
        android:text="@string/demo_text_sms"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"/>

    <TextView
        android:id="@+id/tv_recycler"
        android:text="@string/demo_text_recycler_view"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sms"/>

    <TextView
        android:id="@+id/tv_notify"
        android:text="@string/demo_text_notification"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recycler"
        />

    <ImageView
        android:id="@+id/iv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:contentDescription="@string/demo_text_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notify"
        />

    <TextView
        android:id="@+id/tv_flutter"
        android:text="@string/demo_text_flutter_entrance"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_test"/>

    <TextView
        android:id="@+id/tv_gauss"
        android:text="@string/demo_text_gauss"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flutter"/>

    <TextView
        android:id="@+id/tv_music"
        android:text="@string/demo_text_no_sound_music"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gauss"/>

    <TextView
        android:id="@+id/tv_sticky_header"
        android:text="@string/demo_text_sticky_header"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_music"/>

    <TextView
        android:id="@+id/tv_verification_code"
        android:text="@string/demo_text_short_code"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sticky_header"/>

    <TextView
        android:id="@+id/tv_hook"
        android:text="@string/demo_text_hook_test"
        style="@style/demo_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_code"/>

</androidx.constraintlayout.widget.ConstraintLayout>
